# ai-engineering-workshop

./: .gitignore  README.md  pyproject.toml
agentic-ai/langchain-project/: README.md  requirements.txt
agentic-ai/langchain-project/app/: main.py
agentic-ai/langchain-project/app/agents/: planner_agent.py
agentic-ai/langchain-project/app/api/: deps.py  routes_chat.py  routes_documents.py  routes_memory.py  routes_rag.py
agentic-ai/langchain-project/app/core/: config.py
agentic-ai/langchain-project/app/db/: init_db.py  models.py  session.py
agentic-ai/langchain-project/app/graphs/: main.py  state.py
agentic-ai/langchain-project/app/llms/: embeddings.py  models.py
agentic-ai/langchain-project/app/memory/: long_term.py  manager.py  short_term.py  summarizer.py
agentic-ai/langchain-project/app/rag/: ingest.py  loaders.py  qa_chain.py  retrievers.py  splitters.py  vectorstores.py
agentic-ai/langchain-project/data/db/: app.db
agentic-ai/langchain-project/scripts/: demo_workflow.py  ingest_docs.py  init_db.py  seed_sqlite.py
agentic-ai/mealprep-agentic/: docker-compose.yaml
agentic-ai/mealprep-agentic/app/: bootstrap.py  config.py  context.py  main.py  state.py
deep-learning/keras_intro/: advanced_techniques_learning.ipynb  autoencoders_with_keras.ipynb  diffusion_models.ipynb  gans.ipynb  keras_intro.ipynb  keras_practice_models.ipynb
machine-learning/machine-learning-specialization/notebooks/: collaborative-filtering.ipynb  content-based-filtering.ipynb  reinforcement-learning.ipynb
reinforcement-learning/: reinforcement_learning_with_keras.ipynb
(+45 files in other folders)
